<resources>
    <string name="app_name">TUI UVic-UCC</string>
    <string name="status_bar">UVIC - UCC</string>

    <!-- Main Activity -->
    <string name="title_activity_main">UVic-UCC</string>

    <!-- Bottom Navigation Bar -->
    <string name="events">Events</string>
    <string name="card">Card</string>
    <string name="timetable">Timetable</string>
    <string name="launcher">Launcher</string>
    <string name="bbva">Bbva</string>

    <!-- Card Fragment -->
    <string name="aluname">Enrique</string>
    <string name="alusurname">Seco Orriols</string>
    <string name="niuv">NIUV: </string>
    <string name="aluNum">10022072</string>
    <string name="group">GROUP: </string>
    <string name="groupType">Student</string>
    <string name="ESI">ESI</string>
    <string name="urn">urn:schac:personalUniqueCode:int:esi:uvic.cat:10022072</string>
    <string name="code_bar_num">2110034356</string>

    <!-- Setting Activity -->
    <string name="title_activity_settings">Ajustes</string>
    <string name="preferences">Ajustes</string>
</resources>